--- a/_posts/2023-12-20-c++类与对象.markdown
+++ b/_posts/2023-12-20-c++类与对象.markdown
@@ -69,7 +69,7 @@ int main()
 如图所示，可以看到在程序类的外部通过类初始化的对象使用.运算符只能访问到共有成员。
 
 
-![img](../images\1703054843570.png)
+![](/_posts/images/1.jpg)
 
 ## 二、构造函数、析构函数
 
