--- a/_posts/2024-07-16-postgres内置函数.markdown
+++ b/_posts/2024-07-16-postgres内置函数.markdown
@@ -43,11 +43,11 @@ tags:
 
 接下来讲述如何获取一个没有被使用的oid，其实方法很简单，在上述文件的同级目录下，也就是在src/include/catalog/目录下有一个unused\_oids脚本文件，我们直接在该目录下执行该文件，可得如下数据：
 
-![](image/image_JUgV8MyHl_.png)
+![](/img/in-post/image/image_JUgV8MyHl_.png)
 
 出现的这个id都是未被使用的id，也就是唯一不重复的可以使用的id，然后再将上述信息添加进去，如图所示 。
 
-![](image/image_XOegguu7Z8.png)
+![](/img/in-post/image/image_XOegguu7Z8.png)
 
 > &#x20;这里我是这么理解的，其实这里的pg\_proc就是一张表，我们在里面加的这段文字，就是标志着我增加了一个系统函数的一些信息。
 
@@ -55,7 +55,7 @@ tags:
 
 前面对我们要增加的内置函数进行声明之后，接下来就是对这个函数实现。在src/backend/utils/adt下的pgstatfuncs.c文件增加如下函数实现：
 
-![](image/image_DdvwQzKF2y.png)
+![](/img/in-post/image/image_DdvwQzKF2y.png)
 
 ## 3、重新编译安装PG
 
@@ -63,30 +63,30 @@ tags:
 
 make maintainer-clean命令执行结果如下，无报错则是执行成功，我这里实在源码的根目录执行的，也就是configure命令所在的目录执行的。
 
-![](image/image_wenjfNjNOF.png)
+![](/img/in-post/image/image_wenjfNjNOF.png)
 
 &#x20;接下来就是检查依赖，执行configure命令，可以选择还是安装到原来的目录，也可以选择安装到一个新的目录，在重新安装之前记得先关停数据库服务。如图所示，可以知道无数据库服务在运行。
 
-![](image/image_YV6a7xjIv1.png)
+![](/img/in-post/image/image_YV6a7xjIv1.png)
 
 &#x20;然后除此之外，我们再将之前的data目录更换一个名字。
 
-![](image/image_OKp335qP0G.png)
+![](/img/in-post/image/image_OKp335qP0G.png)
 
 &#x20;然后就可以开始重新安装编译PG了，这里要求和上一篇文章相似，看上一篇文章即可，具体的执行结果如下：
 
-![](image/image_MRI_K9UhTN.png)
+![](/img/in-post/image/image_MRI_K9UhTN.png)
 
 大家不用在意是否一样，只需要在乎是否有报错出现即可，无报错信息则视为执行成功。接下来就是开始编译安装。执行make -j32 && make install命令即可。这样子写是指在执行make命令的时候采用并行执行，并且在执行完之后接着执行make install命令。
 
-![](image/image_MJW7PYLiR6.png)
+![](/img/in-post/image/image_MJW7PYLiR6.png)
 
 ## 4、初始化新的data目录检查内置函数是否添加成功
 
 前面的编译安装没有出现报错，如果出现一些依赖缺失的问题，试着看上一个博客解决，接下来就是重新初始化一个data，验证内置函数是否添加成功。
 
-![](image/image_oUao7rLokx.png)
+![](/img/in-post/image/image_oUao7rLokx.png)
 
 初始化成功，启动数据库服务，验证结果如下可知，postgres内置函数添加成功！
 
-![](image/image_Etc86_gJb2.png)
+![](/img/in-post/image/image_Etc86_gJb2.png)
